[TEX] One pass over abstract and Section 1 [no ci]

--- a/paper/preamble/custom.tex
+++ b/paper/preamble/custom.tex
@@ -12,6 +12,8 @@ group-minimum-digits={3}%
 % REFERENCES
 % ===================================================================
 \usepackage{cleveref} % automatically adds type of reference, MUST BE LOADED AFTER AMSMATH
+\crefname{section}{\S\!\!}{\S\!\!} % use paragraph symbol for Section
+\crefname{appendix}{\S\!\!}{\S\!\!} % use paragraph symbol for Appendix
 
 % ===================================================================
 % TODOS & COMMENTS
